--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
-
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>
+                <input>
+            </td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+    </table>
+    <div align="center">
+        <img src="https://image.shutterstock.com/image-photo/red-apple-isolated-on-white-260nw-1498042211.jpg"/>
+    </div>
 </body>
 </html>
