--- a/src/main/resources/public/index_ylesanne.html
+++ b/src/main/resources/public/index_ylesanne.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <button id="myButton">Press me!</button>
+    <input type="number"/>
     <table id="myTable">
     </table>
     <script>
