--- a/src/main/resources/public/test2.html
+++ b/src/main/resources/public/test2.html
@@ -6,18 +6,15 @@
 </head>
 <body>
 <div style="text-align: center">
-    <p>
-        RegNr: <input id="regNr">
-    </p>
-    <p>
-        Mark: <input id="brand"/>
-    </p>
-    <p>
-        Aasta: <input id="year"/>
-    </p>
-    <button id="saveCarButton">Salvesta</button>
+    <table id="testTable">
+    </table>
+    <button id="testButton">Salvesta</button>
 
     <script>
+        let button = document.getElementById("testButton");
+        let testTable = document.getElementById("testTable");
+
+        testTable.
         // TODO
     </script>
 </div>
