--- a/src/main/resources/public/index2.html
+++ b/src/main/resources/public/index2.html
@@ -6,47 +6,50 @@
 </head>
 <body>
 <a href="#listElements">google</a>
-    <h1>Heading 1</h1>
-    <img src="https://images.unsplash.com/photo-1494548162494-384bba4ab999?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="">
-    <h2>Heading 2</h2>
-    <h3 id="listElements">List elements</h3>
-    <ul>
-        <li>Element 1</li>
-        <li>Element 2</li>
-        <li>Element 3</li>
-    </ul>
-    <ol>
-        <li>Element 1</li>
-        <li>Element 2</li>
-        <li>Element 3</li>
-    </ol>
-    <dl>
-        <dt>Element 1</dt>
-        <dd>Element definition</dd>
-        <dt>Element 2</dt>
-        <dd>Element definition</dd>
-        <dt>Element 3</dt>
-        <dd>Element definition</dd>
-    </dl>
-    <table width="700px" border="1">
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>address</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>John</td>
-            <td>Usa</td>
-        </tr>
-        <tr>
-            <td colspan="3"><input type="password"><button>test</button></td>
-        </tr>
-    </table>
-    <p style="color:red">
-        Punast värvi tekst
-    </p>
-    <br><br><br><br><br><br><br><br><br><br>
+<h1>Heading 1</h1>
+<img src="https://images.unsplash.com/photo-1494548162494-384bba4ab999?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80"
+     alt="">
+<h2>Heading 2</h2>
+<h3 id="listElements">List elements</h3>
+<ul>
+    <li>Element 1</li>
+    <li>Element 2</li>
+    <li>Element 3</li>
+</ul>
+<ol>
+    <li>Element 1</li>
+    <li>Element 2</li>
+    <li>Element 3</li>
+</ol>
+<dl>
+    <dt>Element 1</dt>
+    <dd>Element definition</dd>
+    <dt>Element 2</dt>
+    <dd>Element definition</dd>
+    <dt>Element 3</dt>
+    <dd>Element definition</dd>
+</dl>
+<table width="700px" border="1">
+    <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>address</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>John</td>
+        <td>Usa</td>
+    </tr>
+    <tr>
+        <td colspan="3"><input type="password">
+            <button>test</button>
+        </td>
+    </tr>
+</table>
+<p style="color:red">
+    Punast värvi tekst
+</p>
+<br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
 
