--- a/src/main/resources/public/index3.html
+++ b/src/main/resources/public/index3.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title</title>'
+    <style>
+        div.test-class {color: darkorange;}
+    </style>
 </head>
 <body>
-<div style="text-align: center">
+<div class="test-class" style="text-align: center">
     <table style="margin-left:auto;margin-right:auto;" border="1" width="50%">
         <tr>
             <td>test</td>
