--- a/src/main/resources/public/sample/index5.html
+++ b/src/main/resources/public/sample/index5.html
@@ -7,25 +7,55 @@
 </head>
 <body>
 <input id="a">
+<input id="b">
+<input id="c">
 <button id="button">Do something</button>
+<button id="showAll">Get accounts</button>
 <span id="answer">Siia tuleb vastus</span>
+<table id="answerTable">
+
+</table>
 <script>
     let button = document.getElementById("button");
     button.onclick = function () {
         let a = document.getElementById("a");
         let url = '/account/' + a.value
         let body = {
-            accountNumber: a.value
+            accountNumber: a.value,
+            b: b.value,
+            c: c.value
         }
-        let options = {
-            method: 'POST',
-            body: JSON.stringify(body)
+        let options = { // options objekti ei ole vaja kui tegu on GET päringuga
+            method: 'POST', // seda ei ole vaja kui tegu on GET päringuga
+            body: JSON.stringify(body), // seda ei ole vaja kui tegu kui ei ole RequestBody
+            headers: { // seda ei ole vaja kui tegu kui ei ole RequestBody
+                'Content-Type': 'application/json'
+            }
         }
         fetch(url, options)
             .then(result => result.text())
             .then(function (result) {
                 let answer = document.getElementById("answer");
                 answer.innerText = result;
+            })
+    }
+
+    let showAllButton = document.getElementById("showAll")
+    showAllButton.onclick = function(){
+        fetch('/account')
+            .then(result => result.json())
+            .then(function (result) {
+                let a = document.getElementById("answerTable");
+                for(let i = 0; i < result.length; i++){
+                    let row = document.createElement("tr");
+                    a.appendChild(row)
+                    let cell = document.createElement("td");
+                    row.append(cell);
+                    cell.innerText = result[i].accountNumber
+                    let cell2 = document.createElement("td");
+                    row.append(cell2);
+                    cell2.innerText = result[i].balance;
+                }
             })
     }
 </script>
